# dataset-pipeline

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  THIRDPARTY_LICENSES.txt  gpl-3.0.txt
cmake/: FindGMP.cmake
src/base/: util.cc  util.h
src/camera/: camera_base.cc  camera_base.h  camera_base_impl.h  camera_base_impl_fisheye.h  camera_base_impl_radial.h  camera_benchmark.cc  camera_benchmark.h  camera_fisheye_fov.cc  camera_fisheye_fov.h  camera_fisheye_polynomial_4.cc  camera_fisheye_polynomial_4.h  camera_fisheye_polynomial_tangential.cc  camera_fisheye_polynomial_tangential.h  camera_full_opencv.cc  camera_full_opencv.h  camera_models.h  camera_pinhole.cc  camera_pinhole.h  camera_polynomial.cc  camera_polynomial.h  camera_polynomial_4.cc  camera_polynomial_4.h  camera_polynomial_tangential.cc  camera_polynomial_tangential.h  camera_radial.cc  camera_radial.h  camera_radial_fisheye.cc  camera_radial_fisheye.h  camera_simple_pinhole.cc  camera_simple_pinhole.h  camera_simple_radial.cc  camera_simple_radial.h  camera_simple_radial_fisheye.cc  camera_simple_radial_fisheye.h  camera_thin_prism.cc  camera_thin_prism.h
src/camera/test/: test_camera.cc
src/dataset_inspector/: draw_mask_tool.cc  draw_mask_tool.h  gui_image_widget.cc  gui_image_widget.h  gui_main_window.cc  gui_main_window.h  localize_image_tool.cc  localize_image_tool.h
src/exe/: cube_map_renderer.cc  dataset_inspector.cc  ground_truth_creator.cc  icp_scan_aligner.cc  image_registrator.cc  normal_estimator.cc  point_cloud_cleaner.cc  point_cloud_editor.cc  sfm_scale_estimator.cc  splat_creator.cc
src/geometry/: local_statistical_outlier_removal.h  local_statistical_outlier_removal.hpp  two_pass_centroid.h  two_pass_centroid.hpp  two_pass_normal_3d.h  two_pass_normal_3d.hpp  two_pass_normal_3d_omp.h  two_pass_normal_3d_omp.hpp
src/icp/: icp_point_to_plane.cc  icp_point_to_plane.h  icp_point_to_plane_impl.h
src/io/: colmap_model.cc  colmap_model.h  meshlab_project.cc  meshlab_project.h
src/opengl/: mesh.cc  mesh.h  opengl_util.cc  opengl_util.h  opengl_util_egl.cc  opengl_util_egl.h  opengl_util_glx.cc  opengl_util_glx.h  renderer.cc  renderer.h  shader_program_opengl.cc  shader_program_opengl.h
src/opt/: color_optimizer.cc  color_optimizer.h  cost_calculator.cc  cost_calculator.h  descriptor.h  image.cc  image.h  interpolate_bilinear.h  interpolate_trilinear.h  intrinsics.cc  intrinsics.h  intrinsics_and_pose_optimizer.cc  intrinsics_and_pose_optimizer.h  multi_scale_point_cloud.cc  multi_scale_point_cloud.h  observations_cache.cc  observations_cache.h  occlusion_geometry.cc  occlusion_geometry.h  optimizer.cc  optimizer.h  parameters.h  point_observation.h  problem.cc  problem.h  rig.cc  rig.h  rig_images.cc  rig_images.h  robust_weighting.h  util.cc  util.h  visibility_estimator.cc  visibility_estimator.h
src/opt/test/: test_alignment.cc  test_alignment_util.cc  test_alignment_util.h  test_icp.cc  test_interpolation.cc  test_intrinsics_and_pose_optimizer.cc  test_multi_scale_point_cloud.cc  test_problem.cc  test_renderer.cc
src/point_cloud_editor/: csg_operation.cc  csg_operation.h  main_window.cc  main_window.h  object.cc  object.h  render_widget.cc  render_widget.h  scene.cc  scene.h  tool.h  tool_csg.cc  tool_csg.h  tool_select_beyond_plane.cc  tool_select_beyond_plane.h  tool_select_lasso.cc  tool_select_lasso.h  tool_set_up_direction.cc  tool_set_up_direction.h  util.h
test_data/: identical_images.txt  small_offset.txt
